--- a/autograph_test/templates/base.html
+++ b/autograph_test/templates/base.html
@@ -1,22 +1,78 @@
 {% load i18n %}<!DOCTYPE html>
 <html lang="{{ LANGUAGE_CODE }}"{% if LANGUAGE_BIDI %} dir="rtl"{% endif %}>
 <head>
+    <title>
+        {% block title %}{% endblock title %}
+    </title>
     <meta charset="utf-8">
-    <title>{% block title %}{% endblock title %}</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="author" content="Zive Zab">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    {% block meta %}
+        <meta name="keywords" content="{% trans 'Autograph' %}" />
+        <meta name="description" content="{% trans 'Autograph with jQuery UI Signature / jSignature' %}" />
+    {% endblock meta %}
+
+    {% block header_meta %}
+    {% endblock header_meta %}
+
     <link type="text/css" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/themes/south-street/jquery-ui.css" rel="stylesheet">
-    {% block header_css %}{% endblock header_css %}
+    <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" media="screen">
+
+    {% block header_css %}
+    {% endblock header_css %}
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
         <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    {% block header_javascript %}{% endblock header_javascript %}
+
+    {% block header_javascript %}
+    {% endblock header_javascript %}
 </head>
 <body>
-    {% block content %}{% endblock content %}
-    {% block footer %}{% endblock footer %}
+    {% block navigation %}
+        <div class="container">
+            <div class="navbar navbar-static-top">
+                <a class="navbar-brand" href="#">Autograph</a>
+                <ul class="nav navbar-nav">
+                    <li {% if selected_page == 'home' %}class="active"{% endif %}><a class="brand" href="{% url 'home' %}">Home</a></li>
+                    <li {% if selected_page == 'uisignature' %}class="active"{% endif %}><a href="{% url 'home' %}?type=1">jQuery Signature UI</a></li>
+                    <li {% if selected_page == 'jsignature' %}class="active"{% endif %}><a href="{% url 'home' %}?type=2">jSignature</a></li>
+                </ul>
+            </div>
+        </div>
+    {% endblock navigation %}
+
+    <div class="container">
+        <ul class="breadcrumb">
+        {% block breadcrumb %}
+            <li><a class="active" href="#">Home</a></li>
+        {% endblock breadcrumb %}
+        </ul>
+    </div>
+
+    {% block content %}
+    {% endblock content %}
+
+    {% block footer %}
+        <footer>
+        <div class="container">
+            <div class="well well-sm text-center">
+                Powered by <a href="https://www.djangoproject.com/" target="_blank" rel="nofollow">Django</a>&nbsp;·&nbsp;
+                Using <a href="http://getbootstrap.com/" target="_blank" rel="nofollow">Bootstrap</a>&nbsp;·&nbsp;
+                Source from <a href="https://github.com/zivezab/django-autograph/" target="_blank" rel="nofollow">Github</a>
+            </div>
+        </div>
+    </footer>
+    {% endblock footer %}
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.0/jquery-ui.min.js"></script>
-    {% block bottom_javascript %}{% endblock bottom_javascript %}
+    <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
+
+    {% block bottom_javascript %}
+    {% endblock bottom_javascript %}
 </body>
 </html>
